apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        # image: httpd
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        image: 2190431/test-microk8s-service2:33
        ports:
        - containerPort: 80
