sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  labels:
      name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
            serviceName: nginx-service
            servicePort: 80
      - path: /nginx/apache
        pathType: Prefix
        backend:
          serviceName: apache-service
          servicePort: 80
